<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">


    <TextView
        android:id="@+id/heading_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/attribution_heading"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/body_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/heading_id"
        android:text="@string/body_map"
        android:textAlignment="center"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/body_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/body_map"
        android:text="@string/body_icons"
        android:textAlignment="center"
        android:textSize="18sp"
        android:autoLink="web"
        />


</RelativeLayout>
